[Offline pages] Add new Error page failure status inside the MHTML archiver and update corresponding histogram.

This should record number of error pages we are seeing being recorded by Prerender and also eliminate this altogether.

BUG=709639,692688

Review-Url: https://codereview.chromium.org/2810913002
Cr-Commit-Position: refs/heads/master@{#464087}

Former-commit-id: 2d54317a97881484713af4069f01677e924dc87e