components/offline_pages/core/offline_page_archiver.h
@@ -50,6 +50,8 @@ class OfflinePageArchiver {
     ERROR_ARCHIVE_CREATION_FAILED,  // Creation of archive failed.
     ERROR_SECURITY_CERTIFICATE,     // Page was loaded on secure connection, but
                                     // there was a security error.
+    ERROR_ERROR_PAGE,               // We detected an error page.
+    ERROR_INTERSTITIAL_PAGE,        // We detected an interstitial page.
   };
 
   // Describes the parameters to control how to create an archive.
