components/offline_pages/core/offline_page_types.h
@@ -34,6 +34,10 @@ enum class SavePageResult {
   // are already locally accessible.
   SKIPPED,
   SECURITY_CERTIFICATE_ERROR,
+  // Returned when we detect trying to save a chrome error page.
+  ERROR_PAGE,
+  // Returned when we detect trying to save a chrome interstitial page.
+  INTERSTITIAL_PAGE,
   // NOTE: always keep this entry at the end. Add new result types only
   // immediately above this line. Make sure to update the corresponding
   // histogram enum accordingly.
